k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flint-gate
  labels:
    app: flint-gate
spec:
  type: ClusterIP
  selector:
    app: flint-gate
  ports:
    - name: proxy
      port: 4456
      targetPort: proxy
    - name: admin
      port: 4457
      targetPort: admin
