k8s/shared-envoy-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gate-http-to-https
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: acme-http01-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - gate.sansabaroyalty.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
